Full fix for Firefox/Android overflow issue (#87)

--- a/css/mobiscroll.core.css
+++ b/css/mobiscroll.core.css
@@ -136,6 +136,7 @@
 }
 .dw-moz .dww {
     opacity: .99;
+    z-index: 2;
 }
 .dwsc .dwwl {
     background: #888;
