--- a/css/mobiscroll.wp.css
+++ b/css/mobiscroll.wp.css
@@ -14,7 +14,7 @@
     margin: 0;
     vertical-align: middle;
 }
-.wp .dwhl .dwc {
+.wp .dwhl {
     padding: 0;
 }
 .wp .dwwc {
